fix extra spacing on video show

--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -6,10 +6,11 @@ section.video-show {
     justify-content: space-between;
     height: 100%;
     min-height: 100vh;
-    width: 100vw;
+    // width: 100vw;
+    width: 100%;
 
     div.left {
-      margin: 24px 0 0 42px;
+      margin: 24px 0 0 36px;
       width: calc(100vw - 510px);
 
       div.video-container {
@@ -205,7 +206,7 @@ section.video-show {
     div.right {
       min-height: 100%;
       width: 402px;
-      margin: 24px 42px 0 0;
+      margin: 24px 36px 0 0;
 
       span {
         // remove later, just for sizing
